# metalink-editor

./: CMakeLists.txt  CREDITS.txt  ChunkPanel.cpp  ChunkPanel.hpp  FileScan.cpp  FileScan.hpp  GeneralPanel.cpp  GeneralPanel.hpp  HashContext.cpp  HashContext.hpp  HashContextImpl.cpp  HashContextImpl.hpp  HashDialog.cpp  HashDialog.hpp  HashPanel.cpp  HashPanel.hpp  LICENSE.txt  LicenseFrame.cpp  LicenseFrame.hpp  MainFrame.cpp  MainFrame.hpp  Metalink.cpp  Metalink.hpp  Metalink3Reader.cpp  Metalink3Reader.hpp  Metalink3Writer.cpp  Metalink3Writer.hpp  Metalink4Reader.cpp  Metalink4Reader.hpp  Metalink4Writer.cpp  Metalink4Writer.hpp  MetalinkEditor.cpp  MetalinkEditor.hpp  MetalinkEditorListener.hpp  MetalinkEditorProgressListener.hpp  MetalinkFile.cpp  MetalinkFile.hpp  MetalinkHash.hpp  MetalinkSource.cpp  MetalinkSource.hpp  (+25 more)
tests/: HashContextTest.cpp  MetalinkEditorTest.cpp  invalid.meta4  invalid.metalink  main.cpp  test1.meta4  test1.metalink  test2.meta4  test2.metalink
